# staffbot

./: Cargo.toml
src/: commands.rs  fil.rs  main.rs
src/fil/: fields.rs
