[package]
name = "staffbot"
version = "0.1.0"
edition = "2021"

[dependencies]
fondabots-lib = { version = "1.1", path = "../fondabots-lib"}
strum = "0.26"
strum_macros = "0.26"
regex = "1.10"
serenity = "0.12"
chrono = "0.4"
rss = "2.0"
poise = "0.6"
yaml-rust2 = "0.8"
reqwest = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
maplit = "1.0"